	$Id: ChangeLog,v 1.8 2000/03/22 21:06:35 glamm Exp $

2000-03-22	Bob Glamm <glamm@users.sourceforge.net>

	* Changed all instances of ted, tedturner, Ted, and Ted Turner,
	to something involving Paradise.

	* Made all XBM images compiled in by default as something for the
	client to fall back on.  Also made rainbow dashboard XPM and
	MOTD header XPM compiled in by default (it was easier than
	modifying the code to handle those two cases).

	* Made useExternalImages on by default.  This way an external
	image always overrides an internal image (either XBM or XPM).

	* Fixed up handling for external images if they did not exist.

	* Added context-sensitive ship images.  If the complete set
	of images exists:

	  1) on a P-server, the <team> and <team>.colored pixmaps are used;
	     on a B-server, the <team>.bronco & <team>.bronco.colored pixmaps
	     are used.
	  2) Friendly players use the normal (grey) pixmaps; non-friendly
	     players use the colored pixmaps.

	This way we get easy distinction between server types, AND we
	get easy distinction between who's friendly and who's not.

2000-03-20	Bob Glamm <glamm@users.sourceforge.net>

	* Added multipath support to shipBitmapPath, changed default
	path.  shipBitmapPath is now a colon-separated list of paths
	that specifies where to find the XBM or XPM images.  By default
	it is "~/.tedturner/images:${datadir}/paradise/images".  The image
	that is loaded is the first one found, so this default image path
	also allows a user to override system-installed images by plopping
	them down in their home directories.

	* Fixed up ship XPMs.  Consistent colors and single-
	view SBs are now present for all races.

2000-03-17	Bob Glamm <glamm@users.sourceforge.net>

	* Fixed problem with locking on cloaked players from Bronco
	observer mode.

	* Fixed up some Ind and weapon XBMs.

2000-03-15	Bob Glamm <glamm@users.sourceforge.net>

	* Added 'make install' target and addition of default images path
	in client.
